maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:3: error: not found: value random
  var rng:Int = random(3)
                ^RandomMouseMaze:14: error: not found: value random
    rng = random(3)
          ^