maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  var rng:Int = random(3)
  while(!estSurBiscuit){
    if (rng == 0){
      if (!estFaceMur){
        avance()
      } else if (rng == 1){
        droite()
      } else {
        gauche()
      }
    }
    rng = random(3)
  }
  prendBiscuit()
}